Issue #1252742: Cart table header wraps badly in Opera when image column is empty.

--- a/uc_cart/uc_cart.css
+++ b/uc_cart/uc_cart.css
@@ -79,6 +79,10 @@
 /**
  * CSS rules for the cart form at /cart.
  */
+#uc-cart-view-form th {
+  white-space: nowrap;
+}
+
 #uc-cart-view-form td.desc {
   width: 100%;
 }
